# dialexa-python-cookiecutter

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
search/: search_index.json
stylesheets/: extra.css
tests/: test_main.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .python-version  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.project_slug}}/src/: main.py
