[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dialexa-python-cookiecutter"
version = "0.1.0"
description = ""
authors = ["Daniel Spence <Daniel.Spence@dialexa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^1.7.3"
pyinvoke = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mkdocs = "^1.2.3"
pyinvoke = "^1.0.4"
commitizen = "^2.20.5"
flakeheaven = "^0.11.1"
pre-commit = "^2.17.0"
black = "^22.1.0"
safety = "^1.10.3"
isort = "^5.10.1"
flake8 = "^4.0.1"
darglint = "^1.8.1"
flake8-bugbear = "^22.1.11"
flake8-bandit = "^2.1.2"
mkdocs-material = "^8.1.11"
mkdocs-include-markdown-plugin = "^3.2.3"
mkdocstrings = "^0.18.0"
mypy = "^0.931"
pytest-cov = "^3.0.0"
pytest-cookies = "^0.6.1"
flake8-docstrings = "^1.6.0"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[tool.flakeheaven]
format = "grouped"
extended_default_ignore=[]
max_line_length = 120
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503"]
mccabe = ["+*"]
flake8-bugbear = ["+*"]
flake8-darglint = ["+*"]
flake8-bandit = ["+*"]
flake8-docstrings = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
profile = "black"
multi_line_output = 3
